--- a/Views/Shared/Header.cshtml
+++ b/Views/Shared/Header.cshtml
@@ -1,10 +1,10 @@
 <div class="container-fluid p-0" translate="no">
-    <div class="container-fluid border-bottom">
-        <div class="container d-flex flex-row justify-content-between p-0">
+    <div class="container-fluid border-bottom bg-danger">
+        <div class="container d-flex flex-row justify-content-between p-0 text-white">
             <div class="d-flex align-items-center">
-                <span class="p-1">जम्मू और कश्मीर सरकार</span>
-                <span class="p-1 border-end border-start border-2">Government of Jammu and Kashmir</span>
-                <span class="p-1">حکومت جموں و کشمیر</span>
+                <span class="p-1 fw-bold">जम्मू और कश्मीर सरकार</span>
+                <span class="p-1 fw-bold border-end border-start border-2">Government of Jammu and Kashmir</span>
+                <span class="p-1 fw-bold">حکومت جموں و کشمیر</span>
             </div>
             <div class="d-flex align-items-center">
                 <span class="border-start border-end border-2 p-1">
