--- a/Views/Shared/Navbar.cshtml
+++ b/Views/Shared/Navbar.cshtml
@@ -2,13 +2,11 @@
     <div class="container-fluid border-bottom border-3 border-danger p-0">
         <partial name="Header" />
     </div>
-    <div class="container-fluid d-flex justify-content-center">
+    <div class="container-fluid d-flex justify-content-center px-0">
         <i class=" navbar-toggler fa-solid fa-bars" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarNavDropdown"></i>
         <a class="navbar-brand fw-bold text-primary md-hidden fs-6">Social Welfare Department</a>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-            <a class="navbar-brand fw-bold text-primary sm-hidden fs-2 px-5 border-end border-dark">Social Welfare
-                Department</a>
+        <div class="collapse navbar-collapse justify-content-center bg-danger" id="navbarNavDropdown">
             <ul class="navbar-nav" id="leftContainer">
             </ul>
             <ul class="navbar-nav" id="rightContainer">
