--- a/Views/Officer/Index.cshtml
+++ b/Views/Officer/Index.cshtml
@@ -82,11 +82,6 @@
         </div>
     </div>
     <div class="container-fluid mt-2" id="listTable" style="display: none;">
-        <div class="container center-align gap-2 mb-2" id="containerSwitcher" style="display: none;">
-            <button class="btn btn-dark" id="mainButton">Inbox</button>
-            <button class="btn btn-secondary" id="approveButton">Approve List</button>
-            <button class="btn btn-secondary" id="poolButton">Pool</button>
-        </div>
         <div class="container-fluid d-flex justify-content-end mb-2">
             <div id="optionButtons">
                 <button class="btn btn-info" onclick="printTable('printableArea')">Print</button>
@@ -95,25 +90,8 @@
                 <button class="btn btn-success" id="exportAll">Export All Data</button>
             </div>
         </div>
-        <div class="container-fluid" id="printableArea">
-            <div id="mainContainer" class="container-fluid mb-5">
-                <div id="MainContainer" class="d-none justify-content-center">
-                    <button class="btn btn-dark d-flex mx-auto" id="transferToApproveButton" disabled>
-                        Transfer To Approve List
-                    </button>
-                </div>
-                <div id="ApproveContainer" class="d-none gap-2 justify-content-center mt-5">
-                    <button class="btn btn-dark d-flex" id="transferToPoolButton" disabled>Transfer To Pool</button>
-                    <button class="btn btn-dark d-flex" id="transferBackFromApprove" disabled>Transfer Back to
-                        Inbox</button>
-                </div>
-                <div id="PoolContainer" class="d-none gap-2 justify-content-center mt-5">
-                    <button class="btn btn-dark d-flex" id="sanctionAll" disabled>Sanction</button>
-                    <button class="btn btn-dark d-flex" id="transferBackFromPool" disabled>Transfer Back to
-                        Inbox</button>
-                    <button class="btn btn-dark d-flex" id="transferBackToInbox" disabled>Transfer Back to
-                        Approve List</button>
-                </div>
+        <div class="container-fluid py-5" id="printableArea">
+            <div id="mainContainer" class="container-fluid mb-5 py-5">
                 <div class="table-responsive" style="overflow-x: auto;">
                     <table class="table table-striped table-hover table-bordered w-100" id="applicationsTable">
                         <thead class="bg-dark text-white">
@@ -121,7 +99,6 @@
                         <tbody id="tbody"></tbody>
                     </table>
                 </div>
-
             </div>
         </div>
     </div>
