--- a/Views/Shared/Header.cshtml
+++ b/Views/Shared/Header.cshtml
@@ -8,10 +8,10 @@
             </div>
             <div class="d-flex align-items-center">
                 <span class="border-start border-end border-2 p-1">
-                 <button id="toggleSpeech" class="bg-white border-0 shadow-0">SCREEN READER ACCESS</button>
+                 <button id="toggleSpeech" class="border-0 shadow-0 bg-transparent text-white">SCREEN READER ACCESS <i class="fa-solid fa-volume-xmark border border-white p-2 rounded-1"></i></button>
                 </span>
                 <span class="border-end border-2 p-1">
-                    <select class="form-select" name="fontSize" id="fontSize">
+                    <select class="form-select text-white" name="fontSize" id="fontSize">
                         <option value="">Aa</option>
                         <option value="+">A+</option>
                         <option value="-">A-</option>
@@ -129,13 +129,18 @@
     // Enable or disable the text-to-speech functionality when button is clicked
     $('#toggleSpeech').on('click', function() {
       speechEnabled = !speechEnabled; // Toggle the state
+      if(speechEnabled){
+        $('#toggleSpeech i').removeClass('fa-volume-xmark').addClass('fa-volume-high'); // Add class or perform actions on the <i> tag
+      }
+      else{
+        $('#toggleSpeech i').removeClass('fa-volume-high').addClass('fa-volume-xmark'); // Add class or perform actions on the <i> tag
+      }
       console.log("Button ",speechEnabled);
       @* $(this).text(speechEnabled ? 'Disable Text-to-Speech' : 'Enable Text-to-Speech'); *@
     });
 
     // Hover event for all text elements (headings and paragraphs)
     $(document).on('mouseenter', 'p, h1, h2, h3,a,label,button', function() {
-        console.log(speechEnabled,!isSpeaking);
       if (speechEnabled && !isSpeaking) { // Only speak if enabled and not currently speaking
         const textContent = $(this).text().trim(); // Get the text content
         speakText(textContent); // Speak the content
