--- a/Views/Officer/Index.cshtml
+++ b/Views/Officer/Index.cshtml
@@ -120,7 +120,7 @@
             <!-- Modal body -->
             <div class="modal-body">
                 <div class="container-fluid" id="sanctionLetterDistplay">
-                    <iframe id="sanctionFrame" style="width: 100%; height: 800px;"></iframe>
+                    <iframe id="sanctionFrame" style="width: 100%; height: 800px;display:block"></iframe>
                     <button class="btn btn-dark d-flex mx-auto" id="approve">Approve</button>
                 </div>
             </div>
